[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/revolver.png" type="Texture" id=1]
[ext_resource path="res://Images/big_light.png" type="Texture" id=2]
[ext_resource path="res://Weapons/WeaponBase/muzzle_flash.png" type="Texture" id=3]
[ext_resource path="res://Weapons/WeaponBase/BulletCasingParticle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/WeaponBase/SmokeParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Weapons/Bullet/Bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://Weapons/WeaponBase/WeaponBase.gd" type="Script" id=7]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Animation" id=1]
resource_name = "MuzzleFlash"
length = 0.03
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Muzzle/MuzzleFlash:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Muzzle/MuzzleFlash:visible")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Reload"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Rotation_0"
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="WeaponBase" type="Node2D"]
script = ExtResource( 7 )
Bullet = ExtResource( 6 )
bullet_casing_particle = ExtResource( 4 )
smoke_particle = ExtResource( 5 )

[node name="WeaponSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 7, -1 )

[node name="MuzzleFlash" type="Sprite" parent="Muzzle"]
visible = false
position = Vector2( 7, 0 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="Muzzle/MuzzleFlash"]
material = SubResource( 4 )
texture = ExtResource( 3 )
texture_scale = 1.2
color = Color( 1, 0.866667, 0, 1 )
energy = 0.7

[node name="Light2D2" type="Light2D" parent="Muzzle/MuzzleFlash"]
texture = ExtResource( 2 )
texture_scale = 0.6
energy = 0.4

[node name="Handle" type="Position2D" parent="."]
position = Vector2( 0, -1 )

[node name="FireCooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MuzzleFlash = SubResource( 1 )
anims/Reload = SubResource( 2 )
anims/Rotation_0 = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="FireCooldownTimer" to="." method="_on_FireCooldownTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
